<resources>
    <string name="app_name">QFree-Customer</string>
    <string name="customer_id">59b96da301fc4d2a0c7ea18a</string>
    <string name="btn_login">Login</string>
    <string name="lbl_queue_number">Queue Number</string>
    <string name="lbl_queue_name">Queue</string>
    <string name="lbl_diff_number">Yet to go</string>
    <string name="tv_facility_id">59b96ce401fc4d2a0c7ea188</string>
    <string name="btn_facility_search">Search</string>
    <string name="lbl_curr_numb">Current number</string>
    <string name="lbl_expected_number">Your number</string>
    <string name="lbl_expected_diff">Difference</string>
    <string name="btn_enqueue">Enqueue</string>
</resources>
